--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ logging:
   file:
     name: log/debug.log  # 로깅 파일 위치이다.
   level:             # 각 package 별로 로깅 레벨을 지정할 수 있다.
-    com.urban.ROI_System: debug
+    com.ncs7.muscleCat: debug
   logback:
     rollingpolicy:
       max-history: 7
@@ -21,7 +21,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       format_sql: true
       use_sql_comments: true
   devtools:
@@ -46,5 +46,6 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+    data: classpath:h2/data.sql
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
