--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2-console
+      path: /db
   datasource:
     url: jdbc:h2:~/test;
     driver-class-name: org.h2.Driver
