--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "axios": "^0.24.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-daum-postcode": "^3.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -28,6 +29,7 @@
     ]
   },
   "proxy": "http://localhost:80",
+  
   "browserslist": {
     "production": [
       ">0.2%",
