--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-daum-postcode": "^3.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -29,7 +31,6 @@
     ]
   },
   "proxy": "http://localhost:80",
-  
   "browserslist": {
     "production": [
       ">0.2%",
